docs-archive/apache-airflow-providers-airbyte/2.0.0/_sources/_api/airflow/providers/airbyte/sensors/airbyte/index.rst.txt
:mod:`airflow.providers.airbyte.sensors.airbyte`
================================================

.. py:module:: airflow.providers.airbyte.sensors.airbyte

.. autoapi-nested-parse::

   This module contains a Airbyte Job sensor.



Module Contents
---------------

.. py:class:: AirbyteJobSensor(*, airbyte_job_id: str, airbyte_conn_id: str = 'airbyte_default', api_version: Optional[str] = 'v1', **kwargs)

   Bases: :class:`airflow.sensors.base.BaseSensorOperator`

   Check for the state of a previously submitted Airbyte job.

   :param airbyte_job_id: Required. Id of the Airbyte job
   :type airbyte_job_id: str
   :param airbyte_conn_id: Required. The name of the Airflow connection to get
       connection information for Airbyte.
   :type airbyte_conn_id: str
   :param api_version: Optional. Airbyte API version.
   :type api_version: str

   .. attribute:: template_fields
      :annotation: = ['airbyte_job_id']

      

   .. attribute:: ui_color
      :annotation: = #6C51FD

      

   
   .. method:: poke(self, context: dict)




