docs-archive/apache-airflow-providers-airbyte/2.1.1/_sources/_api/airflow/providers/airbyte/sensors/airbyte/index.rst.txt
:py:mod:`airflow.providers.airbyte.sensors.airbyte`
===================================================

.. py:module:: airflow.providers.airbyte.sensors.airbyte

.. autoapi-nested-parse::

   This module contains a Airbyte Job sensor.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.airbyte.sensors.airbyte.AirbyteJobSensor




.. py:class:: AirbyteJobSensor(*, airbyte_job_id: int, airbyte_conn_id: str = 'airbyte_default', api_version: str = 'v1', **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Check for the state of a previously submitted Airbyte job.

   :param airbyte_job_id: Required. Id of the Airbyte job
   :type airbyte_job_id: str
   :param airbyte_conn_id: Required. The name of the Airflow connection to get
       connection information for Airbyte.
   :type airbyte_conn_id: str
   :param api_version: Optional. Airbyte API version.
   :type api_version: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['airbyte_job_id']

      

   .. py:attribute:: ui_color
      :annotation: = #6C51FD

      

   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



